<resources>
    <string name="app_name">To Do</string>
    <string name="empty_group_placeholder">There\'s nothing here!</string>
    <string name="add_username_hint">enter your username...</string>
    <string name="add_list_static">Add List</string>
    <string name="add_new_list_hint">Enter List Name</string>
    <string name="selectList">Select a list</string>
    <string name="rename_list_new_title">Enter the new title</string>
    <string name="placeholderListName">List Name</string>
    <string name="noTaskDueToday">No tasks due today!</string>
    <string name="noTaskDueTomorrow">No tasks due tomorrow!</string>
    <string name="noTaskImportant">No important tasks!</string>
    <string name="addTaskHint">Add a task</string>
    <string name="remindMeAt">Remind me at:</string>
    <string name="pickDate">Pick a Date</string>
    <string name="xClearDueDate">X Clear due date</string>
    <string name="placeholderTaskDue">This is the task that is due!</string>
    <string name="today">Today</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="done">Done</string>
    <string name="important">Important</string>
    <string name="changeUsername">Change Username</string>
    <string name="enterNewUsername">Enter New Username below</string>
    <string name="cancel">CANCEL</string>
    <string name="change">CHANGE</string>
    <string name="deleteList">Are you sure you want to delete the list?</string>
    <string name="confirm">CONFIRM</string>
    <string name="nine_am">9 AM</string>
    <string name="twelve_pm">12 PM</string>
    <string name="three_pm">3 PM</string>
    <string name="six_pm">6 PM</string>


</resources>
